# Three-dimensional-measurement-of-a-cutting-edge-radius-micro-machining-tool

./: CMakeLists.txt  README.md
header/: FunctionsGivesListsRadius.hpp  FunctionsGivesRadiusTool.hpp  figures.hpp  robust_estim.hpp  visualisation.hpp
nuages/: n1densepair31-32.pcd  n3-1k-densepair31-32.pcd  simuOutils.pcd  u31kdensepair30-31.pcd
radius_measured/: distance.txt  inter_y.txt  radius.txt  radius_equation.txt  radius_extract.txt  radius_filtered.txt  robest_line.txt  roi.txt  roi_extract.txt  roi_filtered.txt
source/: FunctionsGivesListsRadius.cpp  FunctionsGivesRadiusTool.cpp  figures.cpp  figures.py  main.cpp  visualisation.cpp
